          only rendered for the actual mapper being
          queried against. The column won't be
          "pulled in" from a subclass or superclass
          mapper since it's not needed.

    - Fixed shard_id argument on ShardedSession.execute().
      [ticket:1072]
      
- sql
    - Columns can again contain percent signs within their
      names. [ticket:1256]
      
    - PickleType now favors == comparison by default,
      if the incoming object (such as a dict) implements
      __eq__().  If the object does not implement 
      __eq__() and mutable=True, a deprecation warning
      is raised.
      
    - Fixed the import weirdness in sqlalchemy.sql
      to not export __names__ [ticket:1215].
    
    - Using the same ForeignKey object repeatedly
      raises an error instead of silently failing
      later. [ticket:1238]
      
    - Added NotImplementedError for params() method
      on Insert/Update/Delete constructs.  These items
      currently don't support this functionality, which
      also would be a little misleading compared to
      values().

    - Reflected foreign keys will properly locate 
      their referenced column, even if the column
      was given a "key" attribute different from
      the reflected name.  This is achieved via a 
      new flag on ForeignKey/ForeignKeyConstraint 
      called "link_to_name", if True means the given 
      name is the referred-to column's name, not its 
      assigned key.
      [ticket:650]
      
    - select() can accept a ClauseList as a column
      in the same way as a Table or other selectable
      and the interior expressions will be used as
      column elements. [ticket:1253]
      
    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

    - union() and union_all() will not whack 
      any order_by() that has been applied to the 
      select()s inside.  If you union() a 
      select() with order_by() (presumably to support